<resources>
    <string name="app_name">My App2R</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="my_order">My Order</string>
    <string name="offer">Offers</string>
    <string name="wallet">Wallet</string>
    <string name="complaints">Complains</string>
    <string name="rate_app">Rate the application</string>
    <string name="invite_friend">Invite friends</string>
    <string name="contact_us">Contact Us</string>
    <string name="other_app">Our Other App</string>
    <string name="provider_app">Download our service provider app"</string>

    <string name="text_transfer_car">Transfer Car</string>
    <string name="text_nearest_vehicle">Nearest Vehicle</string>
    <string name="text_motorbike">Transfer Motorbike</string>
    <string name="text_goods">Transfer Goods</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="info">Info</string>
    <string name="my_cars">My Cars</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="change">Change</string>
    <string name="currency">Currency</string>
    <string name="saudi_riyal">Saudi Riyal</string>
    <string name="app_language">App Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="additional_details">Additional Details</string>
    <string name="full_name">Full Name</string>
    <string name="iqama_id">Iqama ID</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="nearest_vehicle_activity">Nearest Vehicle Activity</string>
    <string name="transfer_car_activity">Transfer Car Activity</string>
    <string name="transfer_goods_activity">Transfer Goods Activity</string>
    <string name="transfer_motorbikeactivity">Transfer MotorbikeActivity</string>

    <string name="goods_description">write a description of the goods for shipping</string>
    <string name="hint_goods_description">I want to ship (boxes, furniture, etc) from ... to ...</string>
    <string name="bike_description">write a description of your motorbike</string>
    <string name="hint_bike_description">I want to ship Motorbike from ... to ...</string>
    <string name="send_order">Send order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer_car">Transfer Car</string>
    <string name="nearest_truck">Nearest Truck</string>
    <string name="if_your_complaint_related">If your complaint is related to a shipment, Enter your shipment number</string>

    <string name="sar">SAR</string>
    <string name="nearest_truck_text">Nearest Truck</string>
    <string name="nasil_ksa">\@nasil_ksa</string>
    <string name="info_nasil_sa">info@nasil.sa</string>
    <string name="mobile_no">0506081110</string>
    <string name="contact_us_via_below_channels">You can contact us via below channels</string>
    <string name="my_no">0510920224</string>
    <string name="transportation_appointment">Transportation Appointment</string>
    <string name="transportation_date">Transportation Date</string>
    <string name="one_car">One Car</string>
    <string name="multiple_cars">Multiple Cars</string>
    <string name="search">Search</string>
    <string name="shipment_number">Shipment Number</string>
    <string name="message_type">Message Type</string>
    <string name="suggestions">Suggestions</string>
    <string name="write_your_message_here">Write your message here...</string>
    <string name="send">send</string>
    <string name="submit">Submit</string>
    <string name="pickup_city">Pickup City</string>
    <string name="dropoff_city">Dropoff City</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="confirm_order">Confirm order</string>
    <string name="online_payment">Online Payment</string>
    <string name="payment_methods">Payment methods</string>
    <string name="add">Add</string>
    <string name="promo_discount">Promo discount %</string>
    <string name="promo_code">Promo code</string>
    <string name="include_vat_15">Include vat 15%</string>
    <string name="price_details">Price details</string>
    <string name="terms">Terms</string>
    <string name="when_you_click_on_i_agree_button_you_are_agreering_nto_the_conditions_of_shipping">When you click on I agree button you are agreering\nto the conditions of shipping</string>
    <string name="shipping_terms_and_conditions">Shipping terms and conditions</string>
    <string name="full">FULL</string>
    <string name="there_is_car_insurance">There is car insurance</string>
    <string name="text_delivery_date">Delivery Date</string>
    <string name="transfer_time">Recieved date</string>
    <string name="max_50_km">Max 50 KM</string>
    <string name="add_service">Add Service</string>
    <string name="_100_sar_for_delivery_city_only">100 SAR for delivery city only</string>
    <string name="_100_sar_for_recipent_city_only">100 SAR for recipent city only</string>
    <string name="_175_sar_for_both_city">175 SAR for both city</string>
    <string name="door_to_door_service">Door-To-Door Service</string>
    <string name="transport_details">Transport details</string>
    <string name="call">Call</string>
    <string name="company_name">شركه سعيد محي البسامي</string>
    <string name="dashboard">Dashboard</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>