<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_order"
            android:title="@string/my_order"
            android:icon="@drawable/ic_my_order"
            />
        <item android:id="@+id/nav_offer"
            android:title="@string/offer"
            android:icon="@drawable/ic_offers"
            />
        <item android:id="@+id/nav_wallet"
            android:title="@string/wallet"
            android:icon="@drawable/ic_wallet"
            />
        <item android:id="@+id/nav_complains"
            android:title="@string/complaints"
            android:icon="@drawable/ic_complaints"
            />
        <item android:id="@+id/nav_rate_app"
            android:title="@string/rate_app"
            android:icon="@drawable/ic_rating"
            />
        <item android:id="@+id/nav_invite_friend"
            android:title="@string/invite_friend"
            android:icon="@drawable/ic_share"
            />
        <item android:id="@+id/nav_contact_us"
            android:title="@string/contact_us"
            android:icon="@drawable/ic_contact_us"
            />
    </group>

    <item android:title="@string/other_app">
        <menu>
            <item android:id="@+id/nav_provider_app"
                android:title="@string/provider_app"
                />
        </menu>
    </item>

</menu>