<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ComplaintFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/shipment_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/shipment_number"
            android:inputType="number"
            android:backgroundTint="@color/lightGrey"
            android:textAlignment="viewStart" />

        <TextView
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/if_your_complaint_related"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />

        <TextView
            android:id="@+id/message_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/message_type"
            android:textAlignment="viewStart"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />
        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp">
            <RadioButton
                android:id="@+id/rb_arabic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/complaints"
                android:checked="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/myColor"/>

            <RadioButton
                android:id="@+id/rb_english"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suggestions"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/myColor"/>
        </RadioGroup>

        <EditText
            android:gravity="top"
            android:id="@+id/et_message"
            android:background="@drawable/bg_gray_stroke"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/write_your_message_here"
            android:lines="10"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />
        <Button
            android:textColor="@android:color/white"
            android:id="@+id/btn_send"
            android:background="@drawable/rounded_accent_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/submit"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />


    </LinearLayout>

</FrameLayout>