<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferCar">

    <!-- NestedScrollView for scrollable content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Time Label -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/transportation_appointment"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Date EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/dateEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/transportation_date"
                android:focusable="false"
                android:cursorVisible="false"
                android:textSize="16sp"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/timeLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Date Icon -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_calender_colored"
                app:layout_constraintTop_toTopOf="@id/dateEditText"
                app:layout_constraintBottom_toBottomOf="@id/dateEditText"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Transportation Info Label -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/transportationInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/transportation_appointment"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                app:layout_constraintTop_toBottomOf="@id/dateEditText"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- RadioGroup for car options -->
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/transportationInfoLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- One Car Option -->
                <RadioButton
                    android:id="@+id/oneCarRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:buttonTint="@color/myColor"
                    android:text="@string/one_car" />

                <!-- Single car details -->
                <LinearLayout
                    android:id="@+id/oneCarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Pickup and drop-off selection -->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/fromSpinner1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:drawableEnd="@drawable/ic_down_arrow"
                            android:hint="@string/pickup_city"
                            android:padding="16dp"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toStartOf="@+id/toSpinner1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/toSpinner1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:drawableEnd="@drawable/ic_down_arrow"
                            android:hint="@string/dropoff_city"
                            android:padding="16dp"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/fromSpinner1"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- Vehicle type -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/vehicle_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_down_arrow"
                        android:hint="@string/vehicle_type"
                        android:padding="16dp"
                        android:textSize="16sp" />

                </LinearLayout>


                <!-- Multiple Cars Option -->
                <RadioButton
                    android:id="@+id/multipleCarsRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/myColor"
                    android:text="@string/multiple_cars" />
            </RadioGroup>

            <!-- Search Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/search"
                android:textAllCaps="false"
                android:background="@drawable/rounded_accent_bg"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/radioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>